--- a/public_html/layouts/basic/styles/libraries/_Libraries.scss
+++ b/public_html/layouts/basic/styles/libraries/_Libraries.scss
@@ -13,7 +13,7 @@
 .select2-selection--single {
 	padding: 0.375rem 1.125rem 0.375rem 0.75rem;
 
-	@at-root .input-group #{&} {
+	@at-root .input-group-append #{&} {
 		border-right: unset !important;
 		border-radius: 0.25rem 0 0 0.25rem !important;
 	}
